+ json file
+ upload files
+ suppoprt unsave into persistence but return json dataset
    - define model.name = ""
    - define parameter stored = "false"

2025-02-11
+ excel (lib: exceljs), xslsx,xls (lib: xlsx)
+ xml (fast-xml-parser)
+ support sync/async (default sync)
    - async = true, the server treat request as background process (make reponse suddenly)
    (reponse contain processid that can invoke api/migratelog/get)
+ support center api
    - api/migratefile/file
    - upload/migrate/file

2025-02-13
+ support error handling
    - verifyError : 
        - true : stop looping data save
        - false : continue looping data save
    - abandonError : 
        - true : throw if error found (this roll back work)
        - false : do not throw when error (this commit work)
+ support auto commit
+ support logging (table: tmigratelog)
+ support result/logging api
    - api/migratelog/get (with processid)
+ support pre/post statement

2025-02-14
+ support result/logging api
    - api/migratelog/retrieve (with migrateid)
    - api/migratelog/get (with processid)
+ support logging by command line running
+ support multi models

2025-02-15
+ support download/report logging error api
    - report/migrate/log        -> default as text file
    - report/migrate/log/txt    -> text file
    - report/migrate/log/json   -> json file

2025-02-18
+ can download file from URL (support import by download file)
+ can auto naming download file

2025-02-19
+ can transfer file from server (support import by ftp file)
+ can auto naming transfer file
+ can using key file (with OpenSSH format)

2025-02-23
+ can import file from mail attachment
+ can auto naming file from mail attachment

2025-02-25
+ can import with vary date format
+ can mix date format with TH/EN locale

2025-02-26
+ can import with reconcile file (cross check between : data file & reconcile file)
(reconcile file contain number of total records)

2025-02-27
+ can import with filter data setting