@@ -473,7 +473,35 @@
             }
         } ]
     },
-
+    "test_file_post_statement_error": {
+        "models": [ {
+            "name": "tso",
+            "alias": { "privateAlias": "PROMPTDB" },
+            "fields": {
+                "mktid": { "type": "STRING", "options": { "seqno": 1 } },
+                "share": { "type": "STRING", "options": { "seqno": 2 } },
+                "unit": { "type": "DECIMAL", "options": { "seqno": 3 } },
+                "price": { "type": "DECIMAL", "options": { "seqno": 4 } },
+                "yield": { "type": "INTEGER" },
+                "effdate": { "type": "DATE", "options": { "seqno": 5 } },
+                "efftime": { "type": "TIME", "options": { "seqno": 6 } },
+                "edittime": { "type": "DATETIME", "options": { "seqno": 7 } },
+                "sharename": { "type": "STRING", "options": { "seqno": 8 } },
+                "defvalue": { "type": "STRING" },
+                "message": { "type": "STRING" },
+                "remarks": { "type": "STRING", "defaultValue": "test_file_post_statement_error" }
+            },
+            "settings": { "skip": 1, "delimiter": ",", "quotable": true,
+                "alwaysThrowable": false, "remark": "alwaysThrowable true will throw exception",
+                "errorCancelationCode": "1054", 
+                "statement": {
+                    "poststatement": {
+                        "sql": "update tso set defvalues='POSTING' ", "remarks": "field defvalues does not exist"
+                    }
+                }
+            }
+        } ]
+    },
     "test_simple": {
         "models": [ {
             "name": "tmigratetest",
