@@ -1,10 +1,10 @@
 import { MigrateTextHandler } from "../handlers/MigrateTextHandler";
 
-let file = "./assets/tso.txt";
 let taskid = "test_file_text";
+let file = "./assets/tso.txt";
 let args = process.argv.slice(2);
-if(args.length>0) file = args[0];
-if(args.length>1) taskid = args[1];
+if(args.length>0) taskid = args[0];
+if(args.length>1) file = args[1];
 async function testMigrateText(file: string, taskid: string) {
     let context = { params: { file: file, taskid: taskid }, meta: {} };
     let handler = new MigrateTextHandler();
@@ -14,3 +14,4 @@ async function testMigrateText(file: string, taskid: string) {
 testMigrateText(file,taskid);
 
 //node dist/test/test.migrate.text.js
+//node dist/test/test.migrate.text.js test_file_post_statement_error
